# topic-search-workflow

./: .gitignore  Makefile  README.md  activities.py  config.py  delete_schedule.py  docker-compose-kafka.yml  docker-compose.yml  pyproject.toml  run_worker.py  run_workflow.py  schedule_workflow.py  search_workflow.py
apps/search_api/: Dockerfile  server.py
apps/search_worker/: run_worker.py
kafka/: consumer_avro.py  consumer_base.py  entites.py  manager.py
repository/: redis_repository.py
src/kafka/: admin.py  consumer_avro.py  consumer_base.py  entites.py  manager.py
src/repository/: redis_repository.py
src/workflow/: activities.py  search_workflow.py
